--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         </div>
 
         <h3 id="servicios-titulo"> CONTACTANOS </h3>
-        <div id="seccion-contacto" class="">
+        <!-- <div id="seccion-contacto" class="">
             <form action="">
                 <label for="txtNombre">Nombre: </label> <input type="text" name="" id="">
             </form>
-        </div>
+        </div> -->
     </main>
 
     <aside>
